[package]
name = "speedguesser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement"] }
wasm-bindgen = "0.2"
gloo-timers = "0.3.0"
log = "0.4"
rand = "0.8"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

cobul = { git = "https://github.com/tdooms/cobul.git", features = ["extra", "icons", "simple", "form", "model", "props"] }